--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "express": "^4.17.1",
     "ibm-watson": "^5.6.0",
     "node-fetch": "^2.6.0",
-    "nunjucks": "^3.2.1"
-  },
-  "devDependencies": {
+    "nunjucks": "^3.2.1",
     "nodemon": "^2.0.4"
   }
 }
